--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Finance</title>
+    <title>Submit Expenses</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
-    <script src="script.js"></script>
     <header>
-        <h1>Personal Finance Dashboard</h1>
+        <h1>Expense Submission</h1>
     </header>
+
     <main>
-        <section id="add-transaction">
-            <h2>Add Transaction</h2>
-            <form action="/submit-form" method="POST">
+        <section id="submit-expense">
+            <h2>Add Expense</h2>
+            <form action="/submit-expense" method="POST">
                 <div>
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" name="amount" required>
+                    <input type="number" id="amount" name="expense" required>
                 </div>
+                <style>
+                    #category {
+                        background-color: #f0f0f0;
+                        border: 1px solid #ccc;
+                        border-radius: 4px;
+                        padding: 5px;
+                        font-size: 16px;
+                    }
+                    #category option {
+                    #date {
+                        background-color: #f0f0f0;
+                        border: 1px solid #ccc;
+                        border-radius: 4px;
+                        padding: 5px;
+                        font-size: 16px;
+                    }
+                        padding: 10px;
+                    }
+                </style>
                 <div>
                     <label for="category">Category</label>
-                    <input type="text" id="category" name="category" required>
+                    <select id="category" name="category" required>
+                        <option value="fixed-expenses">Fixed Expenses</option>
+                        <option value="travel">Travel</option>
+                        <option value="food">Food</option>
+                        <option value="unplanned">Unplanned</option>
+                        <option value="extras">Extras</option>
+                    </select>
                 </div>
                 <div>
                     <label for="date">Date</label>
-                    <input type="date" id="date" name="date" >
+                    <input type="date" id="date" name="date">
                 </div>
                 <div>
                     <label for="description">Description</label>
@@ -34,18 +58,49 @@
                 </div>
                 <div>
                     <label for="time">Time</label>
-                    <input type="time" id="time" name="time" >
+                    <input type="time" id="time" name="time">
                 </div>
-                <div>
-                    <label for="real-time">Real Time</label>
-                    <input type="checkbox" id="real-time" name="real-time">
-                </div>
-                <button type="submit">Submit</button>
+                <button type="submit">Submit Expense</button>
             </form>
         </section>
+
+        <section id="set-budget-link">
+            <a href="setbudget.html" class="lin">Set Budget</a>
+        </section>
+
+        <section id="track-link">
+            <a href="trackexpense.html" class="tck">Track Budget</a>
+        </section>
     </main>
+
     <footer>
         <p>&copy; 2023 Personal Finance</p>
     </footer>
 </body>
 </html>
+<script>
+    // Handle form submission for adding expenses
+    document.querySelector('form').addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent the form from redirecting or reloading
+
+        // Collect form data
+        const formData = new FormData(event.target);
+
+        // Send the expense data using Fetch API
+        fetch('/submit-expense', {
+            method: 'POST',
+            body: new URLSearchParams(formData), // Send form data as URL-encoded
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded'
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            // Handle the success response (e.g., update the UI with remaining budget and expenses)
+            alert(data.message); // Show a message (you can replace this with any UI update)
+            console.log('Remaining budget:', data.remainingBudget);
+            console.log('Expenses:', data.expenses);
+        })
+        .catch(error => console.error('Error:', error));
+    });
+</script>
